k3s_cluster/base/dmz/alternative-frontends/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-frontalt-searxng
spec:
  type: ClusterIP
  selector:
    app: dmz-frontalt-searxng
  ports:
    - name: web
      protocol: TCP
      port: 6624
      targetPort: 8888
