k3s_cluster/base/dmz/alternative-frontends/searxng/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-frontalt-searxng
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`searxng.alt.dmz.home`)
      # middlewares:
      #   - name: dmz-middleware-auth-authentik
      services:
        - name: dmz-frontalt-searxng-service
          port: 6624
          #tls: {}
